# bookgen

./: .env.example  .gitignore  IDENTITY.md  README.md  USER.md  docker-compose.yml  novel-site-spec.md
.clawhub/: lock.json
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  content.py
content/: README.md
content/books/city-test-begins/: book.json
content/books/city-test-begins/chapters/: 001.md  002.md  003.md  004.md
content/books/city-test-begins/meta/: 001.json  002.json  003.json  004.json
content/books/example-book/: book.json
content/books/example-book/chapters/: 001.md  002.md
content/books/example-book/meta/: 001.json  002.json
content/books/guiren-jianhong-zui-bi-fengwei/: book.json
content/books/guiren-jianhong-zui-bi-fengwei/chapters/: 001.md  002.md  003.md  004.md  005.md  006.md
content/books/inkos-test-book/: book.json
content/books/old-house-2003/: book.json
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/components/: ArticleBody.tsx  BookCard.tsx  ChapterNav.tsx  SiteHeader.tsx
frontend/src/lib/: api.ts  env.ts  types.ts
memory/: 2026-03-28.md
scripts/: build.sh  check.sh  deploy.sh  dev.sh  generate_tts.py  import_inkos_book.py  native-restart.sh  native-start.sh  native-stop.sh  publish_inkos_book.py  status.sh
skills/inkos/.clawhub/: origin.json
(+18 files in other folders)
